# blog_haskell_ita

./: .gitignore  README.md  about.md  shell.nix  site.hs  www-haskell-ita.cabal
css/: styles.css
posts/: 2015-07-04-resoconto_meetup_milano.md  2015-10-17-resoconto_meetup_bologna.md  2015-10-23-hypothenuse.lhs  Haskell-ITA_Infrastructure.md  Meetup_HowTo.md  WikiHowTo.md
posts/events/: 2015-07-04-resoconto_meetup_milano.md  2015-10-17-resoconto_meetup_bologna.md
templates/: blog-list.html  blog.html  default.html  page.html
